--- a/index.html
+++ b/index.html
@@ -1464,11 +1464,10 @@
           hidden
           [hidden] = "presupuesto.Iniciado == 1 ? false : true">   -- o --    
         </span> 
-         <!--
+         <button 
          on="tap:amp-access.login-sign-up,AMP.setState({cuenta: {solicitada: true}}),AMP.setState({registro_usuario: {iniciado: 1}})"
-          amp-access-hide
-         -->
-
+          amp-access-hide>
+         </button>
         <button amp-access="NOT loggedIn" 
 	  on = "tap:amp-access.login-create-token,AMP.setState({cuenta: {solicitada: true}, presupuesto: {iniciado: 1}})"
 	  tabindex="0"
@@ -1558,9 +1557,7 @@
 			<input class='block border-none p0 m0' id='verification-email' name='email' on='select:AMP.setState({ contactoSelected: true})' placeholder='email' required='' type='email'>
 			<label aria-hidden='true' class='absolute top-0 right-0 bottom-0 left-0' for='email'>Email</label>
 			<span validation-for='verification-email' visible-when-invalid='customError'>Este email ya ha sido ocupado por otra persona. Intente con otro.
-			  <!---
 			  <button amp-access-hide='' amp-access='NOT loggedIn' class='ampstart-btn mx1 mt1 caps' on='tap:amp-access.login-sign-in' tabindex='0'>Usar</button>
-			  -->
 			</span>
 			<span validation-for='verification-email' visible-when-invalid='valueMissing'></span>
 			<span validation-for='verification-email' visible-when-invalid='typeMismatch'></span>
