--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
               </amp-state>
 
 	<amp-install-serviceworker
-	  src="/sw.js"
+	  src="https://cornavi.herokuapp.com/sw.js"
 	  data-iframe-src="https://cornavi.herokuapp.com/sw.js"
 	  layout="nodisplay">
 	</amp-install-serviceworker>
