--- a/index.html
+++ b/index.html
@@ -860,6 +860,16 @@
         <h1 class = "m1">Login</h2>
 	<h2 class = "m1">Cliente Aléctrico</h3>
 
+
+        <button amp-access="loggedIn"
+          tabindex="0"
+          on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
+          class="ampstart-btn ml1 caps"
+          amp-access-hide>Destroy Reader
+        </button>
+
+
+
 	<div class = 'stepper vertical' >
 	  <section [hidden]='currentStep > 0'>
 	    <div class='clearfix content'>
