--- a/index.html
+++ b/index.html
@@ -806,13 +806,14 @@
 	  </a>
 	</div>
        
-        <setion amp-access="loggedIn">
+       
+        <section amp-access="loggedIn">
           <template amp-access-template type="amp-mustache">
             <h1 class= "m1"> {{current_user}} </h1>
           </template>
         </section>
 
-        <setion amp-access="NotloggedIn">
+        <section amp-access="NotloggedIn">
           <template amp-access-template type="amp-mustache">
            Ud no está logado en el backend de alectrico
           </template>
