--- a/index.html
+++ b/index.html
@@ -813,9 +813,9 @@
           </template>
         </section>
 
-        <section amp-access="NotloggedIn">
+        <section amp-access="NOT loggedIn">
           <template amp-access-template type="amp-mustache">
-           Ud no está logado en el backend de alectrico
+           <h1 class= "m1"> Ud no está logado en el backend de alectrico </h1>
           </template>
         </section>
 
