--- a/index.html
+++ b/index.html
@@ -730,10 +730,6 @@
 	  </a>
 	</div>
       
-        <section>
-         <h1 class="m1"> Contenido Neutro </h1>
-        </section>
-       
         <section amp-access="loggedIn">
 
           <template amp-access-template type="amp-mustache">
@@ -752,8 +748,7 @@
 
         <section amp-access="NOT loggedIn">
 
-          <h1 class = "m1">Login</h2>
-	  <h2 class = "m1">Cliente Aléctrico</h3>
+          <h1 class = "m1">Registro</h2>
 
 	  <div class = 'stepper vertical' >
 	    <section [hidden]='currentStep > 0'>
