--- a/index.html
+++ b/index.html
@@ -708,6 +708,21 @@
       </script>
     </amp-state>
 
+    <amp-state id="contactoSelected">
+      <script type="application/json">
+       false
+      </script>
+    </amp-state>
+
+    <amp-state id="consentimiento">
+      <script type="application/json">
+       false
+      </script>
+    </amp-state>
+
+
+
+
     <div id="abe-preview-header" 
       class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
       <section amp-access="loggedIn">
