--- a/index.html
+++ b/index.html
@@ -792,9 +792,23 @@
 
 	        </span>
 
-	        <form [hidden]='!consentimiento' action-xhr='https://cornavi.herokuapp.com/contactos/create' amp-access='NOT loggedIn' class='' custom-validation-reporting='show-first-on-submit' method='post' on='submit-success:AMP.setState({contactoSelected: true})' target='_top' verify-xhr="https://cornavi.herokuapp.com/contactos/verify">
-		  <input data-amp-replace='CLIENT_ID' name='clientId' type='hidden' value="CLIENT_ID(uid)">
+	        <form 
+                  hidden
+                  [hidden]='!consentimiento' 
+                  action-xhr='https://cornavi.herokuapp.com/contactos/create' 
+                  amp-access='NOT loggedIn' 
+                  class='' custom-validation-reporting='show-first-on-submit' 
+                  method='post' 
+                  on='submit-success:AMP.setState({contactoSelected: true})' 
+                  target='_top' 
+                  verify-xhr="https://cornavi.herokuapp.com/contactos/verify">
+                    <input data-amp-replace='CLIENT_ID' 
+                       name='clientId' 
+                       type='hidden' 
+                       value="CLIENT_ID(uid)">
+
 		  <p>Ingrese sus datos de contacto</p>
+
 		  <div class='px2 mt4 md-mt3'>
 		    <div class='flex flex-wrap mxn2'>
 
