--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
         </section>
 
 
-        <section amp-access="NOT loggedIn and NOT error">
+        <section amp-access="NOT loggedIn AND NOT error">
 
           <h1 class = "m1">Registro</h2>
 
