--- a/index.html
+++ b/index.html
@@ -751,18 +751,15 @@
         </section>
 
         <section amp-access="loggedIn and NOT error">
-
           <template amp-access-template type="amp-mustache">
             <h1 class= "m1"> {{current_user}} </h1>
+            <button 
+              tabindex="0"
+              on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
+              class="ampstart-btn ml1 caps"
+              amp-access-hide>Destroy Reader
+            </button>
           </template>
-
-          <button amp-access="loggedIn"
-            tabindex="0"
-            on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
-            class="ampstart-btn ml1 caps"
-            amp-access-hide>Destroy Reader
-          </button>
-
         </section>
 
 
