--- a/index.html
+++ b/index.html
@@ -756,8 +756,8 @@
             <button 
               tabindex="0"
               on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
-              class="ampstart-btn ml1 caps"
-              amp-access-hide>Destroy Reader
+              class="ampstart-btn ml1 caps">
+              Destroy Reader
             </button>
           </template>
         </section>
