--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
           </template>
         </section>
           
-        <button 
+        <button amp-access="loggedIn and NOT error" 
           tabindex="0"
           on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
           class="ampstart-btn ml1 caps">
@@ -766,7 +766,10 @@
 
         <section amp-access="NOT loggedIn AND NOT error">
 
-          <h1 class = "m1">Registro</h2>
+          <template amp-access-template 
+            type="amp-mustache">
+            <h1 class = "m1">Registro</h1>
+          </template>
 
 	  <div class = 'stepper vertical' >
 	    <section [hidden]='currentStep > 0'>
