--- a/index.html
+++ b/index.html
@@ -720,12 +720,9 @@
       </script>
     </amp-state>
 
-
-
-
     <div id="abe-preview-header" 
       class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
-      <section amp-access="loggedIn">
+      <section amp-access="loggedIn and NOT error">
         <template amp-access-template type="amp-mustache">
 	{{current_user}}          
         </template>
