--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
           </template>
         </section>
 
-        <section amp-access="loggedIn and NOT error">
+        <section amp-access="loggedIn AND NOT error">
           <template amp-access-template type="amp-mustache">
             <h1 class= "m1"> {{current_user}} </h1>
             <button amp-access="loggedIn and NOT error" 
