--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
      "sign-up":  "https://cornavi.herokuapp.com/sign_up.json/?rid=READER_ID&return=RETURN_URL&amp=true&clientId=CLIENT_ID(uid)"
     },
     "authorizationFallbackResponse": {
-      "error": true,
-      "access": false,
+      "error":      true,
+      "access":     true,
       "subscriber": false
     }
     }
