--- a/index.html
+++ b/index.html
@@ -722,7 +722,8 @@
 
     <div id="abe-preview-header" 
       class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
-      <section amp-access="subscriber">
+      <section amp-access="subscriber"
+        amp-access-hide >
         <template amp-access-template type="amp-mustache">
 	{{current_user}}          
         </template>
