--- a/index.html
+++ b/index.html
@@ -759,7 +759,8 @@
 
         <div amp-access="subscriber"
            amp-acccess-hide>
-           <button 
+           <button amp-access="subscriber"
+              amp-access-hide
               tabindex="0"
               on="tap:amp-access.login-destroy-reader,AMP.setState({ dueno: { invisible: true },  presupuesto: { iniciado: 0 }  })"
               class="ampstart-btn ml1 caps">
