eror de autenticación

--- a/index.html
+++ b/index.html
@@ -744,6 +744,10 @@
         <div class="header">
 	</div>
 
+        <div amp-access="error">
+          <h2 class="m1"> Error de autenticación </h2>
+        </div>
+
         <header>
          Título del documento
         </header>
