--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
     </div>
     
     <div id="abe-preview">
-      <div class="ampstart-card m1">
+      <div class="ampstart-card m1 left-0 right-0">
 
         <div class="header">
 	</div>
@@ -750,7 +750,7 @@
 
         <div amp-access="NOT subscriber"
           amp-access-hide>
-            <h2 class="m1"> Suscribete Ahora </h2>
+            <h4 class="m1"> Regístrate Ahora </h4>
         </div>
 
         <div amp-access="subscriber"
