--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
       flex-direction: column;
       align-items: flex-start;
       padding: 1rem;
-      margin-left: 36px;
+      margin-left: 72px;
+      margin-right: 36px;
     }
 
 
@@ -739,7 +740,7 @@
     </div>
     
     <div id="abe-preview">
-      <div class="ampstart-card m1 left-0 right-0">
+      <div class="ampstart-card m1">
 
         <div class="header">
 	</div>
