--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 
 		  <p>Ingrese sus datos de contacto</p>
 
-		  <div class='px2 mt4 md-mt3'>
+		  <div class='row px2 mt4 md-mt3'>
 		    <div class='flex flex-wrap mxn2'>
 
 		      <div class='col-10 md-col-10 px2'>
