--- a/index.html
+++ b/index.html
@@ -906,9 +906,11 @@
           </div> <!-- stepper vertical -->
         </div> <!-- NOT loggedIn -->
 
+      </div>  <!-- ampstart-card m1 -->
+      
            <button
              on="tap:amp-access.login-create-reader"
-             type='submit'>
+             class="ampstart-btn ml1 caps">
              Crear Reader
            </button>
 
@@ -920,12 +922,10 @@
 
             <button
                on="tap:amp-access.login-sign-in"
-               type='submit'>
+               class="ampstart-btn ml1 caps">
                Iniciar Sesión
-            </button> 
+            </button>
 
-
-      </div>  <!-- ampstart-card m1 -->
     </div> <!--abe-preview-->
   </body>
 </html>
