Ventana de autenticando ...

--- a/index.html
+++ b/index.html
@@ -740,21 +740,22 @@
     </div>
     
     <div id="abe-preview">
+
       <div class="ampstart-card m1">
 
         <div class="header">
-	</div>
+        </div>
 
         <div amp-access="error">
           <h3 class="m1"> Autenticando ... </h3>
         </div>
 
-       <!---
-        <div amp-access="NOT subscriber"
-          amp-access-hide>
-            <h4 class="m1"> Regístrate Ahora </h4>
-        </div>
-       -->
+      </div>
+
+      <div class="ampstart-card m1">
+
+        <div class="header">
+	</div>
 
         <div amp-access="NOT loggedIn AND NOT error"
           hidden
