--- a/index.html
+++ b/index.html
@@ -752,6 +752,10 @@
 
       </div>
 
+    </div>
+
+    <div id="abe-preview">
+
       <div class="ampstart-card m1">
 
         <div class="header">
