--- a/index.html
+++ b/index.html
@@ -726,13 +726,12 @@
       <section amp-access="loggedIn">
 
         <template amp-access-template type="amp-mustache">
-        {{circuito}}
         <!--
           {{auth_token}}
         {{presupuesto_local}}-local {{dueno_local}} | remoto-{{presupuesto_remoto}}
           {{dueno_remoto}} | current_user {{current_user}}
         -->
-        {{current_user}}
+        {{current_reader}}
         </template>
 
       </section>
@@ -917,6 +916,15 @@
     </div>
 
     <div id="abe-preview">
+
+      <div id="abe-preview-header" 
+        class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
+        <section amp-access="loggedIn">
+          <template amp-access-template type="amp-mustache">
+          {{current_reader}}
+          </template>
+        </section>
+      </div>
 
       <div class="ampstart-card m1">
         <button
