--- a/index.html
+++ b/index.html
@@ -751,14 +751,14 @@
 
       </div>
 
-    </div>
-
-    <div id="abe-preview">
-
       <div class="ampstart-card m1">
 
         <div class="header">
 	</div>
+
+        <div amp-access="error">
+          <h3 class="m1"> Autenticando 2 ... </h3>
+        </div>
 
         <div amp-access="NOT loggedIn AND NOT error"
           hidden
