--- a/index.html
+++ b/index.html
@@ -759,6 +759,34 @@
         <div amp-access="error">
           <h3 class="m1"> Autenticando 2 ... </h3>
         </div>
+      </div>
+
+      <div class="ampstart-card m1">
+
+        <div class="header">
+        </div>
+
+        <button
+          on="tap:amp-access.login-create-reader"
+          class="ampstart-btn ml1 caps">
+          Crear Reader
+        </button>
+
+        <button
+           on="tap:amp-access.login-destroy-reader"
+           class="ampstart-btn ml1 caps">
+           Destroy Reader
+         </button>
+
+         <button
+            on="tap:amp-access.login-sign-in"
+            class="ampstart-btn ml1 caps">
+            Iniciar Sesión
+         </button>
+      </div> <!-- ampstart-card m1 -->
+
+
+
 
         <div amp-access="NOT loggedIn AND NOT error"
           hidden
