--- a/index.html
+++ b/index.html
@@ -756,6 +756,15 @@
         <div class="header">
         </div>
 
+        <div class="amp-access-loading">
+          Cargando
+        </div>
+
+        <div class="amp-access-error">
+          Error, Refresque la págin para reintentar.
+        </div>
+
+
         <button
           on="tap:amp-access.login-create-reader"
           class="ampstart-btn ml1 caps">
