--- a/index.html
+++ b/index.html
@@ -756,14 +756,16 @@
         <div class="header">
         </div>
 
+
+        <!---
         <div class="amp-access-loading">
           Cargando
         </div>
 
         <div class="amp-access-error">
-          Error, Refresque la págin para reintentar.
+          Se encontró un error durante la carga, refresque la página para reintentar.
         </div>
-
+        -->
 
         <button
           on="tap:amp-access.login-create-reader"
