Cambiando los textos

--- a/index.html
+++ b/index.html
@@ -770,25 +770,25 @@
         <button
           on="tap:amp-access.login-create-reader"
           class="ampstart-btn ml1 caps">
-          Crear Reader
+          Suscribirse
         </button>
 
         <button
-           on="tap:amp-access.login-destroy-reader"
+          on="tap:amp-access.login-destroy-reader"
+          class="ampstart-btn ml1 caps">
+          Dejar de estar suscrito
+         </button>
+
+         <button
+           on="tap:amp-access.login-sign-in"
            class="ampstart-btn ml1 caps">
-           Destroy Reader
+           Iniciar Sesión
          </button>
 
          <button
-            on="tap:amp-access.login-sign-in"
-            class="ampstart-btn ml1 caps">
-            Iniciar Sesión
-         </button>
-
-         <button
-            on="tap:amp-access.login-sign-out"
-            class="ampstart-btn ml1 caps">
-            Cerrar Sesión
+           on="tap:amp-access.login-sign-out"
+           class="ampstart-btn ml1 caps">
+           Cerrar Sesión
          </button>
 
 
