--- a/index.html
+++ b/index.html
@@ -795,17 +795,18 @@
       </div> <!-- ampstart-card m1 -->
 
 
-
+       <!--
 
         <div amp-access="NOT loggedIn AND NOT error"
           hidden
           >
-
           <template amp-access-template 
             type="amp-mustache">
             <h1 class = "m1">Registro</h1>
           </template>
+        -->
 
+        <div>
 	  <div class = 'stepper vertical' >
 	    <div 
               hidden
